# NetScan

./: Cargo.toml  README.md  build.rs
data/: apple_models.json
src/: app.rs  export.rs  main.rs  model.rs
src/identify/: apple.rs  device_type.rs  llm.rs  mod.rs  oui.rs
src/net/: interface.rs  raw.rs
src/scanner/: arp.rs  banner.rs  dns.rs  mdns.rs  mod.rs  netbios.rs  orchestrator.rs  os_fp.rs  ports.rs  smb.rs  snmp.rs  ssdp.rs  tls_fp.rs  upnp.rs  wsd.rs
src/sniffer/: capture.rs  mod.rs  parser.rs
src/ui/: detail.rs  devices.rs  header.rs  layout.rs  menu.rs  mod.rs  sniffer.rs  theme.rs
