[package]
name = "netscan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
socket2 = { version = "0.5", features = ["all"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = [] }
